ingress-queue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-app-ingress
spec:
  rules:
  - host: queue.mywebapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8161
  ingressClassName: nginx
