qa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-app-ingress
spec:
  rules:
  - host: qa.mywebapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 3000
  ingressClassName: nginx
